--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<label for="essay-box">Write Your Essay Below</label> <br>
+    <textarea name="essay-box" id="evaluatedText" onkeyup="myFunction()"></textarea>
+    <h3 id="wordCount">Word Count : 0</h3>
     <script type="text/javascript" src="./script.js">
 </script>
 
